--- a/calendar.html
+++ b/calendar.html
@@ -10,7 +10,7 @@
             border-collapse: collapse;
             width: 100%;
             max-width: 600px;
-            margin: 0 auto;
+            margin: 0 ;
         }
         th, td {
             border: 1px solid #ddd;
